force-app/main/default/objects/HealthFinding__c/HealthFinding__c.object-meta.xml
<CustomObject>
    <label>Health Finding</label>
    <pluralLabel>Health Findings</pluralLabel>
    <nameField>
        <label>Health Finding Name</label>
        <type>AutoNumber</type>
        <displayFormat>HF-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Individual issue detected during a health scan. Linked to both its parent HealthScan__c (master-detail) and the specific HealthModuleScore__c that produced it (lookup).</description>
</CustomObject>