force-app/main/default/objects/HealthFinding__c/fields/AffectedComponent__c.field-meta.xml
<CustomField>
    <fullName>AffectedComponent__c</fullName>
    <label>Affected Component</label>
    <type>Text</type>
    <length>255</length>
</CustomField>