force-app/main/default/objects/HealthFinding__c/fields/FindingKey__c.field-meta.xml
<CustomField>
    <fullName>FindingKey__c</fullName>
    <label>Finding Key</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
</CustomField>