force-app/main/default/objects/HealthFinding__c/fields/HealthModuleScore__c.field-meta.xml
<CustomField>
    <fullName>HealthModuleScore__c</fullName>
    <label>Module Score</label>
    <type>Lookup</type>
    <referenceTo>HealthModuleScore__c</referenceTo>
    <relationshipLabel>Health Findings</relationshipLabel>
    <relationshipName>HealthFindings</relationshipName>
</CustomField>