force-app/main/default/objects/HealthFinding__c/fields/HealthScan__c.field-meta.xml
<CustomField>
    <fullName>HealthScan__c</fullName>
    <label>Health Scan</label>
    <type>MasterDetail</type>
    <referenceTo>HealthScan__c</referenceTo>
    <relationshipLabel>Health Findings</relationshipLabel>
    <relationshipName>HealthFindings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>