force-app/main/default/objects/HealthFinding__c/fields/ResolvedBy__c.field-meta.xml
<CustomField>
    <fullName>ResolvedBy__c</fullName>
    <label>Resolved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Resolved Findings</relationshipLabel>
    <relationshipName>ResolvedFindings</relationshipName>
</CustomField>