force-app/main/default/objects/HealthFinding__c/fields/ResolvedDate__c.field-meta.xml
<CustomField>
    <fullName>ResolvedDate__c</fullName>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>